--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>RePublic Latin Dictionary</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
