--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>RePublic Latin Dictionary</title>
-  <link rel="stylesheet" type="text/css" href="/style.css">
-  <script type="text/javascript" src="/home.js"></script>
+  <link rel="stylesheet" type="text/css" href="./style.css">
+  <script type="text/javascript" src="./home.js"></script>
 </head>
 
 <body>
