--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <input id="latinTermInput">
   </div>
   <div class="col-md-2">
+    <p>Stage Number</p>
+    <input id="stageNumberInput">
+  </div>
+  <div class="col-md-2">
     <button id="addTerm" class="btn btn-primary">Add term to database</button>
   </div>
 </div>
