--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <input class="form-control" placeholder="Search for a Latin or English word.." id="search">
 <table>
-  <tr><th>English Word</th><th>Latin Word</th></tr>
+  <tr><th>English Word</th><th>Latin Word</th><th>Stage Number</th></tr>
   <tbody id="wordsInsert">
   </tbody>
 </table>
